DC | #3010 | fixing mis-alignment of move down in french

--- a/datawinners/media/css/scss/section_subjects_registration.scss
+++ b/datawinners/media/css/scss/section_subjects_registration.scss
@@ -110,6 +110,6 @@
 
 
 .move-down{
-   padding-right: 10px;
+  padding-right: 9px;
   float: right;
 }
